style.css
/***** Generics *****/

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img {
    max-width: 100%;
}

body{
    color: #fff;
    font-family: 'Montserrat', sans-serif;
}

/***** Utilities *****/

.clearfix{
    content: '';
    display: table;
    clear: both;
}

.col{
    float: left;
}

/* Flex Utilities */

.d-flex{
    display: flex;
}

.d-column{
    flex-direction: column;
}

.justify-content-end{
    justify-content: flex-end;
}

.justify-content-start{
    justify-content: flex-start;
}

.justify-content-start{
    justify-content: center;
}

.align-items-center{
    align-items: center;
}

/* Backgrounds */

.bg-black{
    background-color: #000;
}
.bg-darkgray{
    background-color: #282828;
}
.bg-fadedblue{
    background-color: rgba(8, 10, 15, 0.7);
}
.bg-darkblue{
    background-color: #141922;
}

/* Colors */

.text-white{
    color: #fff;
}

.text-gray{
    color: #7A7C81;
}

/***** Container *****/

.container{
    width: 550px;
    max-height: 1095px;
    /* border: 1px solid dodgerblue; */
}

/***** Sidebar *****/

.sidebar-container{
    display: flex;
    width: 60px;
    height: calc(100vh - 80px);
    padding: 10px;
    align-items: center;
}

.sidebar-container img{
    height: 30px;
    width: auto;
    margin: 5px 5px 5px 0;
}

#logo{
    display: flex;
    height: 40px;
    width: auto;
    margin: 0 0px 20px 0;
    align-items: flex-start;
}

.sidebar-icon-box{
    cursor: pointer;
}

.sidebar-item-text{
    display: none;
}

#text-logo{
    display: none;
}

/***** Header *****/

.header-container{
    width: calc(550px - 60px);
    height: 80px;
    position: fixed;
}

/***** Main *****/

.main-container{
    padding-top: 100px;
    width: 100%;
    height: calc(100vh - 80px);
    overflow-y: scroll;
}

/***** Footer *****/

.player-container{
    width: 550px;
    height: 80px;
}

